# forgebook

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  authors.yaml  index.html  package-lock.json  pyproject.toml  registry.yaml  requirements.txt  rss.xml  sitemap-0.xml  sitemap-index.xml  tags.yaml
.devcontainer/: devcontainer.json
.github/: AGENTS.md  CODEOWNERS  authors_schema.json  copilot-instructions.md  dependabot.yml  pull_request_template.md  registry_schema.json  setup-steps.yml
_astro/: BaseLayout.B7f7Zhyu.css  BaseLayout.astro_astro_type_script_index_0_lang.07txc2t2.js  BaseLayout.astro_astro_type_script_index_0_lang.4YhgKwm5.js  BaseLayout.astro_astro_type_script_index_0_lang.BIKqrp3H.js  BaseLayout.astro_astro_type_script_index_0_lang.BmqVpgrl.js  BaseLayout.astro_astro_type_script_index_0_lang.CMQXOmFp.js  BaseLayout.astro_astro_type_script_index_0_lang.CfcX2yrd.js  BaseLayout.astro_astro_type_script_index_0_lang.CmKcqRXl.js  BaseLayout.astro_astro_type_script_index_0_lang.DskPW1yF.js  BaseLayout.astro_astro_type_script_index_1_lang.BRqpmPf9.js  BaseLayout.astro_astro_type_script_index_1_lang.Btj8jSsj.js  BaseLayout.astro_astro_type_script_index_1_lang.CWzGFQfr.js  BaseLayout.astro_astro_type_script_index_1_lang.DCUucmG_.js  BaseLayout.astro_astro_type_script_index_1_lang.DXo3ixs2.js  BaseLayout.astro_astro_type_script_index_1_lang.DhWVNKzC.js  NotebookActions.astro_astro_type_script_index_0_lang.BkenhMwZ.js  NotebookActions.astro_astro_type_script_index_0_lang.CXi7JC_0.js  index.CD32ctZI.css  index.CQhezG_H.css  (+29 more)
(+1334 files in other folders)
