[project]
name = "forgebook"
version = "0.1.0"
description = "AI Cookbook - Jupyter notebook examples"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "nbconvert>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
